refactor doc
